--- a/project-.html
+++ b/project-.html
@@ -39,7 +39,7 @@
                     <img src="assets/images/favicon-seanus-128x140.png" alt="PMariano-Logo" title="PMariano" style="height: 3.8rem;">
                 </a>
             </span>
-            <span class="navbar-caption-wrap"><a class="navbar-caption text-warning display-2" href="#">PM Portfolio</a></span>
+            
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
@@ -52,7 +52,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-warning display-4" href="index.html#header2-1"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>HOME</a>
-                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-warning display-4" href="index.html#features8-13" data-toggle="dropdown-submenu" aria-expanded="false"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>PROFILES</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-4" href="ux-ui-design.html" aria-expanded="true"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>UX / UI and Web</a><a class="dropdown-item text-warning display-4" href="industrial-design.html" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>Industrial Design</a><a class="dropdown-item text-warning display-4" href="general-design.html" aria-expanded="true"><span class="mbri-change-style mbr-iconfont mbr-iconfont-btn"></span>General Design</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="project-.html" aria-expanded="true"><span class="mbri-magic-stick mbr-iconfont mbr-iconfont-btn"></span>ADAKORT</a></li></ul>
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-warning display-4" href="index.html#features8-13" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>PROFILES</a><div class="dropdown-menu"><a class="dropdown-item text-warning display-4" href="ux-ui-design.html" aria-expanded="true"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>UX / UI and Web</a><a class="dropdown-item text-warning display-4" href="industrial-design.html" aria-expanded="false"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>Industrial Design</a><a class="dropdown-item text-warning display-4" href="general-design.html" aria-expanded="true"><span class="mbri-change-style mbr-iconfont mbr-iconfont-btn"></span>General Design</a></div></li><li class="nav-item"><a class="nav-link link text-warning display-4" href="project-.html" aria-expanded="true"><span class="mbri-magic-stick mbr-iconfont mbr-iconfont-btn"></span>ADAKORT</a></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="#bottom">
                     CONTACT</a></div>
       </div>
