create github pages

--- a/ux-ui-design.html
+++ b/ux-ui-design.html
@@ -117,7 +117,7 @@
                <div class="underline align-center">
                    <div class="line"></div>
                </div>
-              <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style pt-3 align-center display-5">In the <a href="https://uxdi.exa.unicen.edu.ar/" target="_blank" class="text-success">Diploma Grade of Design of digital experiences (UXDI)</a>&nbsp;our practices were testing with users, user-centered design (UCD), prototype in all qualities, Information Architecture, Project Management, Web Layout, A/B Testing, among other techniques.&nbsp;<br><br><div>As use case we've worked with one of Mar del Plata's most emblematic Sports Club in Mar del Plata: 'Club Atlético Quilmes'.</div></h3>
+              <h3 class="mbr-section-subtitle mbr-light mbr-fonts-style pt-3 align-center display-5">In the <a href="https://uxdi.exa.unicen.edu.ar/" target="_blank" class="text-success">Diploma Grade of Design of digital experiences (UXDI)</a>&nbsp;our practices were testing with users, user-centered design (UCD), prototype in all qualities, Information Architecture, Project Management, Web Layout, A/B Testing, among other techniques.&nbsp;<br><br><div>As a use case we've worked with one of Mar del Plata's most emblematic Sports Club in Mar del Plata: 'Club Atlético Quilmes'.</div></h3>
             </div>
 
             <div class="row row-content justify-content-center">
@@ -148,8 +148,8 @@
           <div class="col-lg-6 wrap-block">
               
               <h3 class="mbr-section-subtitle mbr-fonts-style mbr-light mbr-white display-5">PROCESS:<br></h3>
-              <p class="mbr-text mbr-fonts-style mbr-light mbr-white display-7">After interviews with the Client, some of the problems that the Club claimed to have were the lack of precense in the web, the fact that they were loosing subscriptions because their Basquet team had decended of category in the league, the inconsistency in payments from the regular Associates, and overall a missorganization.&nbsp;<br> 
-We divided our class in different groups, were the idea was to lead the study to find and solve most of their problems with digital solutions such as a <strong>Native App, WebSite and Intranet WebApp</strong>.<br>Our group was designated to work and focus on their Website solutions.&nbsp;<br><strong>We've been working with the Club for almost a year. This was certainly a meaningful experience!</strong><br></p>
+              <p class="mbr-text mbr-fonts-style mbr-light mbr-white display-7">After interviews with the Client, some of the problems that the Club claimed to have were the lack of presence in the web, the fact that they were losing subscriptions because their Basquet team had descended from category in the league, the inconsistency in payments from the regular Associates, and overall a miss organization.&nbsp;<br> 
+We divided our class in different groups, where the idea was to lead the study to find and solve most of their problems with digital solutions such as a <strong>Native App, WebSite and Intranet WebApp</strong>.<br>Our group was designated to work and focus on their Website solutions.&nbsp;<br><strong>We've been working with the Club for almost a year. This was certainly a meaningful experience!</strong><br></p>
             <div class="mbr-list counter-container mbr-fonts-style mbr-white display-7">
                 <ul>
                     <li><span style="font-size: 1rem;">UX Project Management (PM)&nbsp;</span><br></li><li>Cognitive Psychology&nbsp;</li><li>Information Architecture&nbsp;</li><li>Accessibility and Inclusive design&nbsp;</li><li>Usability tests&nbsp;</li><li>FrontEnd Development</li><li>UX as Field and Object of Study&nbsp;</li><li>Test: Results Analysis</li></ul><ul>
@@ -173,7 +173,7 @@ We divided our class in different groups, were the idea was to lead the study to
         <div class="underline">
              <div class="line"></div>
          </div>
-        <h3 class="pt-3 mbr-section-subtitle mbr-fonts-style mbr-light display-5"><br>Used to understand the processes within an organization<br><br>&nbsp;<strong><em>"A model is a simplification of reality."</em></strong><br><br>Consists of guiding a participatory process where involves different roles of individuals (<strong>actors</strong>) and all the steps they must follow to perform a series of <strong>tasks</strong>, this is <strong>visualized</strong> to reach a better <strong>understanding</strong> of the organization where the product will be implemented or developed.&nbsp;</h3>
+        <h3 class="pt-3 mbr-section-subtitle mbr-fonts-style mbr-light display-5"><br>Used to understand the processes within an organization<br><br>&nbsp;<strong><em>"A model is a simplification of reality."</em></strong><br><br>Consists of guiding a participatory process that involves different roles of individuals (<strong>actors</strong>) and all the steps they must follow to perform a series of <strong>tasks</strong>, this is <strong>visualized</strong> to reach a better <strong>understanding</strong> of the organization where the product will be implemented or developed.&nbsp;</h3>
         <div class="row media-row">
             
 
@@ -193,7 +193,7 @@ We divided our class in different groups, were the idea was to lead the study to
                            Introduction</p>
                     </div>
                     <div class="item-role px-2">
-                        <p>As use case we've worked with one of Mar del Plata's most important Sports Club, called 'Club Atlético Quilmes'.<br>The main problem they've claimed to have was the lack of precense in the web, the fact that they were loosing subscriptions because their Basquet team had decended of category in the league and also the inconsistency in payments from the regular Associates.<br>We've been working with the Club for almost a year. This was certainly a meaningful experience!</p>
+                        <p>As a use case we've worked with one of Mar del Plata's most important Sports Club, called 'Club Atlético Quilmes'.<br>The main problem they've claimed to have was the lack of presence in the web, the fact that they were losing subscriptions because their basketball team had descended from category in the league and also the inconsistency in payments from the regular Associates.<br>We've been working with the Club for almost a year. This was certainly a meaningful experience!</p>
                     </div>
                 </div>
             </div><div class="team-item col-lg-3 col-md-6  flip-card">
@@ -207,7 +207,7 @@ We divided our class in different groups, were the idea was to lead the study to
                            Goals</p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Understand the flow of association activities, enrollment in secondary school, and coordination of activities of the Club.<br>Identify current dificulties in the organization and potentials &nbsp;improvements.&nbsp;<br>Ensure that clients (board of directors), end users (partners) and developers (us) have a common understanding about the operation of the Club and reach an agreement on the product(s) to be developed.<br></p>
+                        <p>Understand the flow of association activities, enrollment in secondary school, and coordination of activities of the Club.<br>Identify current difficulties in the organization and potential &nbsp;improvements.&nbsp;<br>Ensure that clients (board of directors), end users (partners) and developers (us) have a common understanding about the operation of the Club and reach an agreement on the product(s) to be developed.<br></p>
                     </div>
                 </div>
             </div><div class="team-item col-lg-3 col-md-6  flip-card">
